--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
    <meta charset="UTF-8" /> 
    <title> Run Buddy </title>
+   <link rel="stylesheet" href="./Assets/css/style.css" />
 </head>
 <body>
     <!--navigation-->
