--- a/index.html
+++ b/index.html
@@ -148,6 +148,24 @@
     <!-- "reach out" section-->
     <section>
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3304.728211475146!2d-118.4295513768217!3d34.07648084003841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bc65c07ac239%3A0x9f66d4bfd54b427!2sPlayboy%20Mansion!5e0!3m2!1sen!2sus!4v1607564627717!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>   
+        </div>
+        <div>
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br />
+                Some Town, CA <br />
+                12345 <br />
+                P: 555.Run.Budz (555.786.2839) <br />
+                E: <a href="mailto:info@runuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
     </section>
 
     <!-- footer -->
