--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
     </section>
 
     <!-- "reach out" section-->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3304.728211475146!2d-118.4295513768217!3d34.07648084003841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bc65c07ac239%3A0x9f66d4bfd54b427!2sPlayboy%20Mansion!5e0!3m2!1sen!2sus!4v1607564627717!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>   
         </div>
